--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -41,5 +41,17 @@
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="/css/owl.carousel.css" rel="stylesheet" type="text/css" media="all">
 
+
+        <!-------------------------------------------------------------------------------------------->
+        <!--Page Error-->
+        <!-- Google font -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+
+        <!-- Custom stlylesheet -->
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+        <link type="text/css" rel="stylesheet" href="css/error.css"/>
+
     </head>
 </th:block>
