--- a/src/main/resources/templates/page_user/weather_search.html
+++ b/src/main/resources/templates/page_user/weather_search.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <th:block th:replace="layout/head :: head"></th:block>
+
 <body onload="startTime()">
 <!-- topbar starts -->
 <div class="navbar navbar-default" role="navigation">
@@ -424,43 +425,14 @@
         </div>
         <!-- right page ends-->
     </div><!--/fluid-row-->
-</div><!--/.fluid-container-->
-
+</div>
+<!--/.fluid-container-->
+</body>
+</html>
 <script src="/js/jquery-1.9.1.min.js"></script>
 <script src="/js/owl.carousel.js"></script>
 <script src="/js/weather_search.js"></script>
+<!--Drop Down-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!--<th:block th:replace="layout/footer :: footer"></th:block>-->
-
-<!-- library for cookie management -->
 <script src="js/jquery.cookie.js"></script>
-<!-- calender plugin -->
-<script src='bower_components/moment/min/moment.min.js'></script>
-<script src='bower_components/fullcalendar/dist/fullcalendar.min.js'></script>
-<!-- data table plugin -->
-<script src='js/jquery.dataTables.min.js'></script>
-<!-- select or dropdown enhancer -->
-<script src="bower_components/chosen/chosen.jquery.min.js"></script>
-<!-- plugin for gallery image view -->
-<script src="bower_components/colorbox/jquery.colorbox-min.js"></script>
-<!-- notification plugin -->
-<!--<script src="js/jquery.noty.js"></script>-->
-<!-- library for making tables responsive -->
-<script src="bower_components/responsive-tables/responsive-tables.js"></script>
-<!-- tour plugin -->
-<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
-<!-- star rating plugin -->
-<script src="js/jquery.raty.min.js"></script>
-<!-- for iOS style toggle switch -->
-<script src="js/jquery.iphone.toggle.js"></script>
-<!-- autogrowing textarea plugin -->
-<script src="js/jquery.autogrow-textarea.js"></script>
-<!-- multiple file upload plugin -->
-<script src="js/jquery.uploadify-3.1.min.js"></script>
-<!-- history.js for cross-browser state change on ajax -->
-<script src="js/jquery.history.js"></script>
-<!-- application script for Charisma demo -->
 <script src="js/charisma.js"></script>
-
-</body>
-</html>
